erDiagram
    %% Users & Auth — generated by php artisan erd:generate

    users {
        bigint id PK
        string name
        string email UK
        timestamp email_verified_at
        string password
        string remember_token
        timestamp created_at
        timestamp updated_at
        bigint branch_id FK
        int is_active
    }

    roles {
        bigint id PK
        string name UK
        timestamp created_at
        timestamp updated_at
    }

    user_roles {
        bigint id PK
        bigint user_id FK
        bigint role_id FK
        timestamp created_at
        timestamp updated_at
    }

    branches {
        bigint id PK
        string name
        string address
        string contacts
        timestamp created_at
        timestamp updated_at
        string location
        int fingerprint_operation
        string branch_code
    }

    districts {
        bigint id PK
        string name
        string division
        timestamp created_at
        timestamp updated_at
    }

    %% Relationships
    branches ||--o{ users : branch_id
    roles ||--|{ user_roles : role_id
    users ||--|{ user_roles : user_id

